Sat May 31 16:02:03 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_syslog.rb: remove executable.

Sat May 31 08:58:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/unicode.c (init_case_fold_table): no longer need to
	  initialize tables at runtime.

	* enc/unicode/case-folding.rb (lookup_hash): make perfect hash to
	  lookup case unfolding table 3.

	* enc/unicode/case-folding.rb (lookup_hash): make perfect hash to
	  lookup case unfolding table 2.

	* enc/unicode/case-folding.rb (lookup_hash): make perfect hash to
	  lookup case unfolding table 1.

	* enc/unicode/case-folding.rb (lookup_hash): make perfect hash to
	  lookup case folding table.

	* enc/unicode/case-folding.rb (print_table): merge non-locale and
	  locale tables, and reduce initializing loops.

	* enc/unicode/case-folding.rb (CaseFolding): modularize, and add
	  --output-file option.

	* enc/unicode/case-folding.rb: script to convert CaseFolding.txt,
	  tranlated from CaseFolding.py.

Sat May 31 08:31:41 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Check Tempfile leaks for each test method
	  again.

Sat May 31 03:50:50 2014  Zachary Scott  <e@zzak.io>

	* lib/delegate.rb: [DOC] Document raise in Delegator class
	  Patch by @lucasmazza. [Fixes GH-621]
	  https://github.com/ruby/ruby/pull/621

Fri May 30 21:23:26 2014  Tanaka Akira  <akr@fsij.org>

	* lib/webrick/server.rb: Use a pipe to detect server shutdown.
	  shutdown() or close() for listening socket is not a reliable.
	  Actually, both doesn't work (doesn't wake up select()) on
	  DragonFly BSD 3.6.2.

	* test/webrick/utils.rb: :ShutdownSocketWithoutClose is not required
	  now to immediate server shutdown detection.
	  This fixes fd leaks.

	* test/net/http/utils.rb: Ditto.

Fri May 30 20:58:37 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb (check_fd_leak): Sort the inspected
	  objects list for a FD.

Fri May 30 18:06:55 2014  Tanaka Akira  <akr@fsij.org>
